--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-fastapi
-uvicorn[standard]
-firebase-admin==6.2.0
-google-cloud-firestore==2.11.1
-pydantic
-requests
-beautifulsoup4
-pytz
-python-multipart
-jinja2
-aiofiles
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+firebase-admin>=6.2.0
+pytz>=2023.3
+fastapi>=0.100.0
+uvicorn>=0.23.0
+lxml>=4.9.0
