--- a/manifest.json
+++ b/manifest.json
@@ -8,16 +8,17 @@
     "theme_color": "#2d6a4f",
     "icons": [
       {
-        "src": "icon-192.png",
+        "src": "public_job_icon_192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any maskable"
       },
       {
-        "src": "icon-512.png",
+        "src": "public_job_icon_512.png",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "any maskable"
       }
     ]
+
   }
